--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,6 @@
                 <li><a href="{{ url_for('about') }}">About Us</a></li>
                 <li><a href="{{ url_for('projects') }}">Projects</a></li>
                 <li><a href="{{ url_for('index') }}#blogs">News</a></li>
-                <li class="mobile-only"><a href="#">BOOK A SITE VISIT</a></li>
             </ul>
         </nav>
     </aside>
@@ -92,6 +91,10 @@
     </footer>
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2024/10/10/06/20241010065953-93S3Z088.js"></script>
+
 </body>
 
 </html>
