--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
         <h2 class="locate-title">LOCATE US</h2>
         <p class="locate-subtitle">We have built 7+ projects across the residential segment</p>
         <div class="locate-image">
-            <img src="{{ url_for('static', filename='images/locateus.webp') }}" alt="Locate Us Map" class="map-image">
+            <img src="{{ url_for('static', filename='images/locateusnew.webp') }}" alt="Locate Us Map" class="map-image">
         </div>
         <div class="know-more-button-container">
             <a href="#contact-section">
