--- a/templates/projects.html
+++ b/templates/projects.html
@@ -46,7 +46,7 @@
                 <p>Current Status: OnGoing Projects</p>
                 <br>
                 <div class="project-buttons">
-                    <a href="#" class="view-details-btn">View Project Details</a>
+                    <a href="{{ url_for('maha_res_project') }}" class="view-details-btn">View Project Details</a>
                     <a href="#" class="enquire-btn">Enquire</a>
                 </div>
             </div>
@@ -71,8 +71,9 @@
                 <p>Current Status: OnGoing Projects</p>
                 <br>
                 <div class="project-buttons">
-                    <a href="#" class="view-details-btn">View Project Details</a>
+                    <a href="{{ url_for('maha_kunj_project') }}" class="view-details-btn">View Project Details</a>
                     <a href="#" class="enquire-btn">Enquire</a>
+
                 </div>
             </div>
         </div>
