--- a/templates/projects.html
+++ b/templates/projects.html
@@ -26,7 +26,7 @@
                 <p>Current Status: Completed Projects</p>
                 <br>
                 <div class="project-buttons">
-                    <a href="#" class="view-details-btn">View Project Details</a>
+                    <a href="{{ url_for('Sumitra_project') }}" class="view-details-btn">View Project Details</a>
                     <a href="#" class="enquire-btn">Enquire</a>
                 </div>
             </div>
