--- a/templates/index.html
+++ b/templates/index.html
@@ -78,13 +78,14 @@
     <p class="featured-projects-subtitle">We have built 42+ projects across residential and commercial segments</p>
     <div class="carousel-container">
         <div class="carousel">
-            <a href="{{ url_for('saburi_project') }}" class="project-link">
+             <a href="{{ url_for('Sumitra_project') }}" class="project-link">
                 <div class="project">
-                    <img src="{{ url_for('static', filename='projects/saburi/2.png') }}" alt="Project 1">
-                    <h3>Shree Mahalakshmi Saburi</h3>
-                    <p>Santacruz</p>
+                    <img src="{{ url_for('static', filename='projects/sumitra/Sumitra_profile.png') }}" alt="Project 1">
+                    <h3>Shree Sumitra Apartments</h3>
+                    <p>Malad West</p>
                 </div>
             </a>
+
             <a href="{{ url_for('maha_kunj_project') }}" class="project-link">
                 <div class="project">
                     <img src="{{ url_for('static', filename='projects/maha_kunj/1.png') }}" alt="Project 2">
