--- a/templates/projects.html
+++ b/templates/projects.html
@@ -14,7 +14,7 @@
 <!--        Shree Sumitra Apartments-->
         <div class="project-card">
             <div class="project-image-container">
-                <img src="{{ url_for('static', filename='images/Sumitra.png') }}" alt="Shree Sumitra Apartments" class="project-image">
+                <img src="{{ url_for('static', filename='projects/sumitra/Sumitra_profile.png') }}" alt="Shree Sumitra Apartments" class="project-image">
             </div>
             <div class="project-details">
                 <h3 class="project-title">Shree Sumitra Apartments</h3>
@@ -27,7 +27,7 @@
                 <br>
                 <div class="project-buttons">
                     <a href="{{ url_for('Sumitra_project') }}" class="view-details-btn">View Project Details</a>
-                    <a href="#" class="enquire-btn">Enquire</a>
+                    <a href="{{ url_for('index') }}#contact-section" class="enquire-btn">Enquire</a>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                 <br>
                 <div class="project-buttons">
                     <a href="{{ url_for('maha_res_project') }}" class="view-details-btn">View Project Details</a>
-                    <a href="#" class="enquire-btn">Enquire</a>
+                    <a href="{{ url_for('index') }}#contact-section" class="enquire-btn">Enquire</a>
                 </div>
             </div>
         </div>
@@ -72,51 +72,51 @@
                 <br>
                 <div class="project-buttons">
                     <a href="{{ url_for('maha_kunj_project') }}" class="view-details-btn">View Project Details</a>
-                    <a href="#" class="enquire-btn">Enquire</a>
+                    <a href="{{ url_for('index') }}#contact-section" class="enquire-btn">Enquire</a>
 
                 </div>
             </div>
         </div>
 
-<!--        Shree Mahalkshmi Trinity-->
-        <div class="project-card">
-            <div class="project-image-container">
-                <img src="{{ url_for('static', filename='images/project1.png') }}" alt="Shree Mahalkshmi Trinity" class="project-image">
-            </div>
-            <div class="project-details">
-                <h3 class="project-title">Shree Mahalkshmi Trinity</h3>
-                <div class="project-location">
-                    <span class="project-location-icon">📍</span> Mahim West
-                </div>
-                <hr class="project-separator">
-                <p>Current Status: Upcomming Projects</p>
-                <br>
-                <div class="project-buttons">
-                    <a href="#" class="view-details-btn">View Project Details</a>
-                    <a href="#" class="enquire-btn">Enquire</a>
-                </div>
-            </div>
-        </div>
+<!--&lt;!&ndash;        Shree Mahalkshmi Trinity&ndash;&gt;-->
+<!--        <div class="project-card">-->
+<!--            <div class="project-image-container">-->
+<!--                <img src="{{ url_for('static', filename='images/project1.png') }}" alt="Shree Mahalkshmi Trinity" class="project-image">-->
+<!--            </div>-->
+<!--            <div class="project-details">-->
+<!--                <h3 class="project-title">Shree Mahalkshmi Trinity</h3>-->
+<!--                <div class="project-location">-->
+<!--                    <span class="project-location-icon">📍</span> Mahim West-->
+<!--                </div>-->
+<!--                <hr class="project-separator">-->
+<!--                <p>Current Status: Upcomming Projects</p>-->
+<!--                <br>-->
+<!--                <div class="project-buttons">-->
+<!--                    <a href="#" class="view-details-btn">View Project Details</a>-->
+<!--                    <a href="#" class="enquire-btn">Enquire</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
 <!--        Shree Mahalakshmi Saburi-->
-         <div class="project-card">
-            <div class="project-image-container">
-                <img src="{{ url_for('static', filename='projects/saburi/2.png') }}" alt="Shree Mahalakshmi Saburi" class="project-image">
-            </div>
-            <div class="project-details">
-                <h3 class="project-title">Shree Mahalakshmi Saburi</h3>
-                <div class="project-location">
-                    <span class="project-location-icon">📍</span> Santacruz East
-                </div>
-                <hr class="project-separator">
-                <p>Current Status: Upcomming Projects</p>
-                <br>
-                <div class="project-buttons">
-                    <a href="#" class="view-details-btn">View Project Details</a>
-                    <a href="#" class="enquire-btn">Enquire</a>
-                </div>
-            </div>
-        </div>
+<!--         <div class="project-card">-->
+<!--            <div class="project-image-container">-->
+<!--                <img src="{{ url_for('static', filename='projects/saburi/2.png') }}" alt="Shree Mahalakshmi Saburi" class="project-image">-->
+<!--            </div>-->
+<!--            <div class="project-details">-->
+<!--                <h3 class="project-title">Shree Mahalakshmi Saburi</h3>-->
+<!--                <div class="project-location">-->
+<!--                    <span class="project-location-icon">📍</span> Santacruz East-->
+<!--                </div>-->
+<!--                <hr class="project-separator">-->
+<!--                <p>Current Status: Upcomming Projects</p>-->
+<!--                <br>-->
+<!--                <div class="project-buttons">-->
+<!--                    <a href="#" class="view-details-btn">View Project Details</a>-->
+<!--                    <a href="#" class="enquire-btn">Enquire</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
 
     </div>
